# swiggy-cli

./: .env.example  .gitignore  README.md  integrate.md  package-lock.json  package.json  pivot.md
.runtime/auth/: default.json
.runtime/runs/: run_195d472074a6.json  run_2ee8308650e5.json  (+9 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  health.py  mcp.py  runs.py  workflows.py
backend/app/core/: __init__.py  config.py  errors.py  http.py  telemetry.py
backend/app/domain/: __init__.py
backend/app/domain/auth/: __init__.py  models.py  service.py  token_store.py
backend/app/domain/mcp/: __init__.py  client.py  config.py  models.py  retry_policy.py  service.py  tool_registry.py
backend/app/domain/workflows/: __init__.py  catalog_service.py  draft_service.py  models.py  planner_service.py  run_service.py
backend/app/mcp/: models.py  router.py  service.py
backend/app/workflows/: models.py  router.py  service.py
backend/dev/: mock_swiggy_mcp.py
cli/: .env.example  README.md  package.json
demo/: README.md  build.mjs  package-lock.json  package.json  record.mjs  run.mjs  storyboard.mjs
docs/: architecture.md  backend-contract.md  change-log.md  roadmap.md  tool-inventory.md  workflow-flow.md
frontend/: .env.demo  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
python/: doctor.py  mock_swiggy_mcp.py
src/: commands.ts  config.ts  index.ts  mcp-client.ts  parser.ts  render.ts
workflows/: swiggy.healthy-meal.json  swiggy.team-offsite-meal-orchestration.json
(+89 files in other folders)
