[project]
name = "swiggy-backend"
version = "0.1.0"
description = "Shared Python backend for Swiggy CLI and frontend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
